# candle

./: CLAUDE.md  Cargo.toml  IMPLEMENTATION_SUMMARY.md  QWEN3_OMNI_QUICKSTART.md  STATUS.txt  TEST_ON_LYUDA.md  TTS_VOCODER_DEBUG_GUIDE.md  WGPU_EXAMPLE_GUIDE.md  WGPU_EXAMPLE_SUMMARY.md  analyze_raw_tokens.py  analyze_tts_debug.py  dump_tokens.py  normalize_audio.py  test_wgpu_example.sh
.beads/: issues.jsonl
candle-core/: Cargo.toml
candle-core/examples/: wgpu_basics.rs  wgpu_shader_test.rs  wgpu_varbuilder.rs
candle-core/src/: custom_op.rs  device.rs  lib.rs  safetensors.rs  storage.rs  tensor.rs  test_utils.rs
candle-core/src/quantized/: ggml_file.rs  mod.rs
candle-core/src/wgpu_backend/: device.rs  error.rs  flags.rs  mod.rs  quantized.rs  storage.rs
candle-examples/: Cargo.toml
candle-examples/examples/: qwen3_omni_asr.rs  qwen3_omni_asr_hf.rs  qwen3_omni_text_only.rs
candle-nn/src/: linear.rs  ops.rs  rotary_emb.rs  var_builder.rs
candle-wgpu/: BF16_IMPLEMENTATION_SUMMARY.md  BF16_OPS.md  Cargo.toml
candle-wgpu/src/: device.rs  error.rs  layer_norm.rs  lib.rs  quantized.rs  rope.rs  softmax.rs  storage.rs
candle-wgpu/src/ops/: mod.rs
candle-wgpu/tests/: bf16_ops.rs
docs/: 00-overview.md  01-module-structure.md  02-thinker.md  03-talker.md  04-code2wav.md  05-audio-input.md  06-configuration.md  CHANGES.md  QWEN3_OMNI_TEXT_SETUP.md  wgpu_research.md
logs/: ledger-2025-01-24.md  ledger-2026-01-25-2.md  ledger-2026-01-25.md  ledger.md
tensor-tools/: Cargo.toml
tensor-tools/src/: main.rs  streaming_quantize.rs
(+29 files in other folders)
