[package]
name = "candle-wgpu"
version.workspace = true
edition.workspace = true
description = "wgpu/Vulkan backend for Candle ML framework"
repository.workspace = true
keywords.workspace = true
categories.workspace = true
license.workspace = true

[dependencies]
candle-core = { path = "../candle-core" }
wgpu = "24.0"
bytemuck = { version = "1.14", features = ["derive"] }
parking_lot = "0.12"
thiserror = { workspace = true }
half = { workspace = true }
num-traits = { workspace = true }
pollster = "0.4"
log = { workspace = true }

[dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
anyhow = { workspace = true }
